Still having issues with navbar collapse function

--- a/GamerGateway/Content/WhyDoesThisWork/Site.css
+++ b/GamerGateway/Content/WhyDoesThisWork/Site.css
@@ -2,39 +2,75 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-/*.header {
-    max-height: 500px;
-    background-color: pink;
-    padding: 5px;
-}*/
 html body {
     background-color: lightgrey;
+    font-family: 'Orbitron', sans-serif;
     color: black;
 }
+
 .jumbotron {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     color: black;
 }
 
+.top-bar {
+    font-family: Arial, sans-serif;
+    background: lightgrey;
+    height: 2.8rem;
+    padding: .5rem 0;
+    margin-bottom: .5rem;
+}
+.top-bar a {
+        color: darkblue;
+        text-decoration: none;
+        font-size: 2.0rem;
+}
+
+/*.navbar-brand img {
+    height: 1rem;
+}*/
+/*.links img {
+    height: 1rem;
+}*/
+.navbar {
+    font-size: 1.2rem;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .1);
+    z-index: 1;
+    background: black;
+    color: white;
+}
+.nav-item {
+    padding: .5rem;
+    list-style: none !important;
+}
+.navbar-nav li {
+    padding-block: 10px;
+    list-style: none !important;
+    padding-left: 2em;
+}
+
+.nav-link {
+    color: #5b5555 !important;
+}
+
+    .nav-link.active, .nav-link:hover {
+        color: #4981b3 !important;
+    }
 .fa-gamepad {
     color: purple;
 }
+
 .fa-korvue {
-    color: aqua;
+    color: navy;
 }
+
 .fa-steam {
     color: black;
 }
-/*.body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-    background-color: red;
-    color: red;
-        font-family: 'Orbitron', sans-serif;
-    color: #ff0000;
-}*/
-/**/
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -59,6 +95,7 @@ textarea {
     background-size: contain;
     background-position-x: right;
 }
+
 .featured {
     float: center;
     position: relative;
@@ -70,12 +107,8 @@ textarea {
     border: #ccc solid 1px;
     border-radius: 0.6em;
 }
-.navbar-nav li {
-    padding-block: 10px;
-}
-.nav-link {
-    font-size: 1.1em !important;
-}
+
+
 
 .padding {
     padding-bottom: 2rem;
@@ -126,21 +159,25 @@ textarea {
     .fa-youtube:hover {
         color: navy;
     }
-    footer {
-        background-color: #3f3f3f;
-        color: #d5d5d5;
-        padding-top: 2rem;
-    }
-    hr.light {
-        border-top: 1px solid #d5d5d5;
-        width: 75%;
-        margin-top: .8rem;
-        margin-bottom: 1rem;
-    }
-    footer a {
-        width: 100%;
-        color: #d5d5d5;
-    }
+
+footer {
+    background-color: #3f3f3f;
+    color: #d5d5d5;
+    padding-top: 2rem;
+}
+
+hr.light {
+    border-top: 1px solid #d5d5d5;
+    width: 75%;
+    margin-top: .8rem;
+    margin-bottom: 1rem;
+}
+
+footer a {
+    width: 100%;
+    color: #d5d5d5;
+}
+
 hr.light-100 {
     border-top: 1px solid #d5d5d5;
     width: 100%;
@@ -148,10 +185,6 @@ hr.light-100 {
     margin-bottom: 1rem;
 }
 
-/*.navbar img{
-    height: 90%;
-    width: 10%;
-}*/
 
 /*a.ggbutton {
     background: url(../Images/GGLogo2.png) no-repeat top left;
@@ -178,12 +211,79 @@ hr.light-100 {
     margin-left: 0;
 }*/
 
-.links img{
-    height:50%;
-    width:50%;
+.links img {
+    height: 50%;
+    width: 50%;
     padding-left: 0;
 }
 
 
 
-    
+
+
+
+
+/*RANDOM FIXES, DO I NEED THESE???*/
+
+/* Devices under 1199px (xl) */
+@media (max-width: 1199.98px) {
+}
+/* Devices under 768px (md) */
+@media (max-width: 767.98px) {
+}
+
+/*============ BOOTSTRAP BREAK POINTS:
+
+Extra small (xs) devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
+
+Small (sm) devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+Medium (md) devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+Large (lg) devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+Extra (xl) large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
+=============*/
+
+/*-- Bootstrap Mobile Gutter Fix --*/
+.row, .container-fluid {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+}
+
+/*-- Fixed Background Image --*/
+.fixed-background {
+    position: relative;
+    width: 100%;
+    z-index: 1000 !important;
+}
+
+.fixed-wrap {
+    clip: rect(0, auto, auto, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -999 !important;
+}
+
+.fixed {
+    z-index: -999 !important;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    will-change: transform;
+}
